<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp16"
            android:paddingRight="@dimen/dp16">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp48"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dp4">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_large"
                    android:layout_marginLeft="@dimen/dp4"
                    android:text="@string/registration_page_name"/>

        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical|right"
                android:paddingRight="@dimen/dp4"
                android:text="@string/name_field_prompt"
                android:textSize="@dimen/text_medium" />

            <EditText

                android:id="@+id/nameField"
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="text"

                android:textSize="@dimen/text_medium" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical|right"
                android:paddingRight="@dimen/dp4"
                android:text="@string/email_field_prompt"
                android:textSize="@dimen/text_medium" />

            <EditText

                android:id="@+id/emailField"
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="text"

                android:textSize="@dimen/text_medium" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical|right"
                android:paddingRight="@dimen/dp4"
                android:text="@string/password_field_prompt"
                android:textSize="@dimen/text_medium" />

            <EditText

                android:id="@+id/passwordField"
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="text"

                android:password="true"

                android:textSize="@dimen/text_medium" />

        </TableRow>

        <!--<TableLayout-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="@dimen/dp4"-->
                <!--android:layout_marginBottom="@dimen/dp4">-->

            <!--<TableRow-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="@dimen/dp48"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:visibility="invisible">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="@dimen/dp48"-->
                    <!--android:layout_marginRight="@dimen/dp4"-->
                    <!--android:gravity="center_vertical|right"-->
                    <!--android:paddingRight="@dimen/dp4"-->
                    <!--android:text="@string/created_field_prompt"-->
                    <!--android:textSize="@dimen/text_medium" />-->

                <!--<EditText-->

                    <!--android:id="@+id/createdField"-->
                    <!--android:layout_width="@dimen/dp144"-->
                    <!--android:layout_height="@dimen/dp48"-->
                    <!--android:layout_marginLeft="@dimen/dp4"-->
                    <!--android:focusable="false"-->
                    <!--android:gravity="center_vertical"-->

                    <!--android:textSize="@dimen/text_medium" />-->

            <!--</TableRow>-->

            <!--<TableRow-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="@dimen/dp48"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:visibility="invisible">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="@dimen/dp48"-->
                    <!--android:layout_marginRight="@dimen/dp4"-->
                    <!--android:gravity="center_vertical|right"-->
                    <!--android:paddingRight="@dimen/dp4"-->
                    <!--android:text="@string/ownerId_field_prompt"-->
                    <!--android:textSize="@dimen/text_medium" />-->

                <!--<EditText-->

                    <!--android:id="@+id/ownerIdField"-->
                    <!--android:layout_width="@dimen/dp144"-->
                    <!--android:layout_height="@dimen/dp48"-->
                    <!--android:layout_marginLeft="@dimen/dp4"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:inputType="text"-->

                    <!--android:textSize="@dimen/text_medium" />-->

            <!--</TableRow>-->

            <!--<TableRow-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="@dimen/dp48"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:visibility="invisible">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="@dimen/dp48"-->
                    <!--android:layout_marginRight="@dimen/dp4"-->
                    <!--android:gravity="center_vertical|right"-->
                    <!--android:paddingRight="@dimen/dp4"-->
                    <!--android:text="@string/objectId_field_prompt"-->
                    <!--android:textSize="@dimen/text_medium" />-->

                <!--<EditText-->

                    <!--android:id="@+id/objectIdField"-->
                    <!--android:layout_width="@dimen/dp144"-->
                    <!--android:layout_height="@dimen/dp48"-->
                    <!--android:layout_marginLeft="@dimen/dp4"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:textSize="@dimen/text_medium"-->

                    <!--/>-->

            <!--</TableRow>-->

            <!--<TableRow-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="@dimen/dp48"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:visibility="invisible">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="@dimen/dp48"-->
                    <!--android:layout_marginRight="@dimen/dp4"-->
                    <!--android:gravity="center_vertical|right"-->
                    <!--android:paddingRight="@dimen/dp4"-->
                    <!--android:text="@string/updated_field_prompt"-->
                    <!--android:textSize="@dimen/text_medium" />-->

                <!--<EditText-->

                    <!--android:id="@+id/updatedField"-->
                    <!--android:layout_width="@dimen/dp144"-->
                    <!--android:layout_height="@dimen/dp48"-->
                    <!--android:layout_marginLeft="@dimen/dp4"-->
                    <!--android:focusable="false"-->
                    <!--android:gravity="center_vertical"-->

                    <!--android:textSize="@dimen/text_medium" />-->

            <!--</TableRow>-->

        <!--</TableLayout>-->

        <Button
                android:layout_width="180dp"
                android:layout_height="@dimen/dp48"
                android:text="@string/register_text"
                android:id="@+id/registerButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp4"
                android:textSize="@dimen/text_medium"
                android:height="@dimen/dp40"/>
    </LinearLayout>
</ScrollView>